--- a/BSiNS/Src/scr_XMLNalogZaPrenos.fx.yaml
+++ b/BSiNS/Src/scr_XMLNalogZaPrenos.fx.yaml
@@ -27,7 +27,7 @@
         UpdateContext({
             header:
                 {
-                    No: Text(xmlData.No),
+                    No: Text(xmlData.'No.'),
                     'Transfer-from_Code': Text(xmlData.'Transfer-from_Code'),
                     'Transfer-from_Name': Text(xmlData.'Transfer-from_Name'),
                     'Transfer-to_Code': Text(xmlData.'Transfer-to_Code'),
