--- a/BSiNS/Src/scr_XMLNalogZaPrenos.fx.yaml
+++ b/BSiNS/Src/scr_XMLNalogZaPrenos.fx.yaml
@@ -289,7 +289,7 @@
                             PaddingLeft: =20
                             Size: =10
                             Text: |-
-                                ="Broj naloga :   " & header.'No.'
+                                ="Broj naloga :   " & header.No
                             Width: =Parent.Width
                             Y: =17
                             ZIndex: =2
@@ -345,7 +345,7 @@
                             PaddingLeft: =20
                             Size: =10
                             Text: |-
-                                ="Prenos u :   " & header.'Transfer-to_Code' & "   " & h.'Transfer-to_Name'
+                                ="Prenos u :   " & header.'Transfer-to_Code' & "   " & header.'Transfer-to_Name'
                             Width: =Parent.Width
                             Y: =113
                             ZIndex: =6
@@ -365,11 +365,11 @@
                     "NalogZaPrenosLines As gallery.'BrowseLayout_Vertical_ThreeTextVariant_ver5.0'":
                         BorderColor: =App.Theme.Colors.Darker40
                         Default: |
-                            =First(Filter(colTransferLines, Line_No = scannedItem))
+                            =First(Filter(transferCollection, Line_No = scannedItem))
                         DelayItemLoading: =true
                         Fill: =RGBA(237, 237, 237, 1)
                         Height: =562
-                        Items: =colTransferLines
+                        Items: =transferCollection
                         Layout: =Layout.Vertical
                         LoadingSpinner: =LoadingSpinner.Data
                         OnSelect: |-
@@ -612,7 +612,7 @@
                         DelayItemLoading: =true
                         Fill: =RGBA(237, 237, 237, 1)
                         Height: =560
-                        Items: =Filter(colTransferResEntries, NalogZaPrenosLines.Selected.Item_No = Item_No)
+                        Items: =Filter(NalogZaPrenosLines.Selected.Res_Entry, NalogZaPrenosLines.Selected.Item_No = Item_No)
                         Layout: =Layout.Vertical
                         LoadingSpinner: =LoadingSpinner.Data
                         TemplatePadding: =0
@@ -737,7 +737,7 @@
                                 FontSize: =15
                                 Height: =31
                                 OnChange: |-
-                                    =UpdateIf(colTransferResEntries, NalogZaPrenosResEntry.Selected.Entry_No = ThisRecord.Entry_No ,{Quantity: Value(NalogZaPrenosResEntryQty.Value)});
+                                    =UpdateIf(NalogZaPrenosLines.Selected.Res_Entry, NalogZaPrenosResEntry.Selected.Entry_No = ThisRecord.Entry_No ,{Quantity: Value(NalogZaPrenosResEntryQty.Value)});
                                 Value: =ThisItem.Quantity
                                 Width: =113
                                 X: =112
@@ -759,7 +759,7 @@
                                 HoverDateFill: =App.Theme.Colors.Lighter70
                                 IconBackground: =App.Theme.Colors.Primary
                                 OnChange: |-
-                                    =UpdateIf(colTransferResEntries, NalogZaPrenosResEntry.Selected.Entry_No = ThisRecord.Entry_No ,{Exp_Date: Text(DatePickerExpDateNalogZaPrenos.SelectedDate, "yyyy-mm-dd")})
+                                    =UpdateIf(NalogZaPrenosLines.Selected.Res_Entry, NalogZaPrenosResEntry.Selected.Entry_No = ThisRecord.Entry_No ,{Exp_Date: Text(DatePickerExpDateNalogZaPrenos.SelectedDate, "yyyy-mm-dd")})
                                 OnSelect: =
                                 SelectedDateFill: =App.Theme.Colors.Primary
                                 Width: =158
@@ -778,7 +778,7 @@
                                 FontSize: =15
                                 Height: =31
                                 OnChange: |-
-                                    =UpdateIf(colTransferResEntries, NalogZaPrenosResEntry.Selected.Entry_No = ThisRecord.Entry_No ,{LOT_No: Text(NalogZaPrenosLot.Value)})
+                                    =UpdateIf(NalogZaPrenosLines.Selected.Res_Entry, NalogZaPrenosResEntry.Selected.Entry_No = ThisRecord.Entry_No ,{LOT_No: Text(NalogZaPrenosLot.Value)})
                                 Value: =ThisItem.LOT_No
                                 Width: =113
                                 X: =80
@@ -875,9 +875,9 @@
                                 =Switch(
                                     propertyToChange,
                                     "Quantity",
-                                    UpdateIf(colTransferResEntries, NalogZaPrenosResEntry.Selected.Entry_No = ThisRecord.Entry_No, {Quantity: Value(TextInputCanvas1_2.Value)}),
+                                    UpdateIf(NalogZaPrenosLines.Selected.Res_Entry, NalogZaPrenosResEntry.Selected.Entry_No = ThisRecord.Entry_No, {Quantity: Value(TextInputCanvas1_2.Value)}),
                                     "LOT_No",
-                                    UpdateIf(colTransferResEntries, NalogZaPrenosResEntry.Selected.Entry_No = ThisRecord.Entry_No, {LOT_No: Text(TextInputCanvas1_2.Value)})
+                                    UpdateIf(NalogZaPrenosLines.Selected.Res_Entry, NalogZaPrenosResEntry.Selected.Entry_No = ThisRecord.Entry_No, {LOT_No: Text(TextInputCanvas1_2.Value)})
                                 );
                                 Set(changeValueModal, false);
                             PressedBorderColor: =App.Theme.Colors.Darker40
