--- a/BSiNS/Src/scr_XMLTemeljniceInventure.fx.yaml
+++ b/BSiNS/Src/scr_XMLTemeljniceInventure.fx.yaml
@@ -162,11 +162,11 @@
 
                     "Item_Journal_Lines_Gallery As gallery.'BrowseLayout_Vertical_ThreeTextVariant_ver5.0'":
                         BorderColor: =App.Theme.Colors.Darker40
-                        Default: =First(Filter(salesCollection, Text(Line_No) = scannedItem))
+                        Default: =First(Filter(item_Journal_LineCollection, ThisRecord.'Line_No.' = scannedItem))
                         DelayItemLoading: =true
                         Fill: =RGBA(237, 237, 237, 1)
                         Height: =562
-                        Items: =salesCollection
+                        Items: =item_Journal_LineCollection
                         Layout: =Layout.Vertical
                         LoadingSpinner: =LoadingSpinner.Data
                         OnSelect: =
@@ -310,7 +310,7 @@
                                 FontSize: =15
                                 Height: =31
                                 OnChange: |-
-                                    =UpdateIf(salesCollection, Item_Journal_Lines_Gallery.Selected.Line_No = ThisRecord.Line_No ,{Quantity: Value(Item_JournalQty.Value)});
+                                    =UpdateIf(salesCollection, Item_Journal_Lines_Gallery.Selected.'Line_No.' = ThisRecord.Line_No ,{Quantity: Value(Item_JournalQty.Value)});
                                 Value: =ThisItem.Quantity
                                 Width: =113
                                 X: =110
@@ -332,7 +332,7 @@
                                 HoverDateFill: =App.Theme.Colors.Lighter70
                                 IconBackground: =App.Theme.Colors.Primary
                                 OnChange: |-
-                                    =UpdateIf(salesCollection, Item_Journal_Lines_Gallery.Selected.Line_No = ThisRecord.Line_No ,{Item_Expiration_Date: Text(DatePickerExpDate_Item_Journal.SelectedDate, "yyyy-mm-dd")})
+                                    =UpdateIf(item_Journal_LineCollection, Item_Journal_Lines_Gallery.Selected.'Line_No.' = ThisRecord.'Line_No.' ,{Item_Expiration_Date: Text(DatePickerExpDate_Item_Journal.SelectedDate, "yyyy-mm-dd")})
                                 OnSelect: =
                                 SelectedDateFill: =App.Theme.Colors.Primary
                                 Width: =158
@@ -351,7 +351,7 @@
                                 FontSize: =15
                                 Height: =31
                                 OnChange: |-
-                                    =UpdateIf(salesCollection, Item_Journal_Lines_Gallery.Selected.Line_No = ThisRecord.Line_No ,{Lot_No: Text(Item_Journal_Lot.Value)})
+                                    =UpdateIf(item_Journal_LineCollection, Item_Journal_Lines_Gallery.Selected.'Line_No.' = ThisRecord.'Line_No.' ,{Lot_No: Text(Item_Journal_Lot.Value)})
                                 Value: =ThisItem.Lot_No
                                 Width: =113
                                 X: =86
@@ -371,7 +371,7 @@
                                 PaddingTop: =0
                                 Size: =12
                                 Text: |-
-                                    ="Barcode:   " & ThisItem.Line_No
+                                    ="Barcode:   " & ThisItem.'Line_No.' //promijeniti na barcode kada se property ubaci u xml
                                 VerticalAlign: =VerticalAlign.Top
                                 Width: =Parent.Width
                                 Y: =211
