--- a/BSiNS/Src/scr_XMLTemeljniceInventure.fx.yaml
+++ b/BSiNS/Src/scr_XMLTemeljniceInventure.fx.yaml
@@ -43,11 +43,11 @@
                         Document_Date: Text(line.Document_Date),
                         Sales_Price: Text(line.Sales_Price),
                         Qty_Calculated: Text(line.Qty_Calculated),
-                        'Qty_Calculated_Ext': Text(line.'Qty_Calculated_Ext'),
+                        Qty_Calculated_Ext: Text(line.Qty_Calculated_Ext),
                         Quantity: Text(line.Quantity),
                         Entry_Type: Text(line.Entry_Type),
                         Qty_Phys_Inventory: Text(line.Qty_Phys_Inventory),
-                        'Qty_Phys_Inventory_Ext': Text(line.'Qty_Phys_Inventory_Ext'),
+                        Qty_Phys_Inventory_Ext: Text(line.Qty_Phys_Inventory_Ext),
                         Gen_Bus_Posting_Group: Text(line.Gen_Bus_Posting_Group),
                         Lot_No: Text(line.Lot_No),
                         Item_Expiration_Date: Text(line.Item_Expiration_Date)
@@ -69,11 +69,11 @@
                     Document_Date: Text(xmlData.Transfer_Line.Document_Date),
                     Sales_Price: Text(xmlData.Transfer_Line.Sales_Price),
                     Qty_Calculated: Text(xmlData.Transfer_Line.Qty_Calculated),
-                    'Qty_Calculated_Ext': Text(xmlData.Transfer_Line.'Qty_Calculated_Ext'),
+                    Qty_Calculated_Ext: Text(xmlData.Transfer_Line.Qty_Calculated_Ext),
                     Quantity: Text(xmlData.Transfer_Line.Quantity),
                     Entry_Type: Text(xmlData.Transfer_Line.Entry_Type),
                     Qty_Phys_Inventory: Text(xmlData.Transfer_Line.Qty_Phys_Inventory),
-                    'Qty_Phys_Inventory_Ext': Text(xmlData.Transfer_Line.'Qty_Phys_Inventory_Ext'),
+                    Qty_Phys_Inventory_Ext: Text(xmlData.Transfer_Line.Qty_Phys_Inventory_Ext),
                     Gen_Bus_Posting_Group: Text(xmlData.Transfer_Line.Gen_Bus_Posting_Group),
                     Lot_No: Text(xmlData.Transfer_Line.Lot_No),
                     Item_Expiration_Date: Text(xmlData.Transfer_Line.Item_Expiration_Date)
