--- a/BSiNS/Src/scr_XMLNalogZaProdaju.fx.yaml
+++ b/BSiNS/Src/scr_XMLNalogZaProdaju.fx.yaml
@@ -67,7 +67,7 @@
                     'Gen._Bus._Posting_Group': Text(xmlData.'Gen._Bus._Posting_Group'),
                     'VAT_Bus._Posting_Group': Text(xmlData.'VAT_Bus._Posting_Group'),
                     Transport_Method: Text(xmlData.Transport_Method),
-                    'VAT_Country_Code': Text(xmlData.'VAT_Country_Code'),
+                    VAT_Country_Code: Text(xmlData.VAT_Country_Code),
                     'Ship-to_Code': Text(xmlData.'Ship-to_Code'),
                     'Ship-to_Name': Text(xmlData.'Ship-to_Name'),
                     'Ship-to_Address': Text(xmlData.'Ship-to_Address'),
