--- a/BSiNS/Src/scr_XMLOtpremnice.fx.yaml
+++ b/BSiNS/Src/scr_XMLOtpremnice.fx.yaml
@@ -1361,6 +1361,7 @@
                             Align: ='TextInputCanvas.Align'.End
                             BasePaletteColor: =
                             DisplayMode: =DisplayMode.Edit
+                            FontSize: =12
                             Height: =32
                             LayoutMinHeight: =32
                             LayoutMinWidth: =320
@@ -1425,8 +1426,10 @@
                             Format: ="dd.mm.yyyy"
                             HoverDateFill: =App.Theme.Colors.Lighter70
                             IconBackground: =App.Theme.Colors.Primary
+                            LayoutMinHeight: =20
                             LayoutMinWidth: =50
                             SelectedDateFill: =App.Theme.Colors.Primary
+                            Size: =12
                             StartOfWeek: =StartOfWeek.Monday
                             StartYear: =Year(Today())
                             Width: =150
@@ -1463,6 +1466,7 @@
                             Align: ='TextInputCanvas.Align'.End
                             BasePaletteColor: =
                             DisplayMode: =DisplayMode.Edit
+                            FontSize: =12
                             Height: =32
                             LayoutMinHeight: =32
                             LayoutMinWidth: =320
