--- a/BSiNS/Src/scr_XMLOtpremnice.fx.yaml
+++ b/BSiNS/Src/scr_XMLOtpremnice.fx.yaml
@@ -1291,7 +1291,7 @@
 
                 Header2 As Header:
                     DisplayMode: =DisplayMode.Edit
-                    Height: =75
+                    Height: =55
                     IsLogoVisible: =false
                     IsProfilePictureVisible: =false
                     LayoutMinHeight: =75
@@ -1300,6 +1300,7 @@
                     OnSelectLogo: =false
                     Style: ='Header.Style'.Primary
                     Title: ="Unesite podatke"
+                    TitleFontSize: =15
                     UserEmail: =User().Email
                     UserImage: =User().Image
                     UserName: =User().FullName
