--- a/BSiNS/Src/scr_XMLOtpremnice.fx.yaml
+++ b/BSiNS/Src/scr_XMLOtpremnice.fx.yaml
@@ -1368,7 +1368,7 @@
                             LayoutMinWidth: =320
                             OnChange: =
                             Placeholder: ="Količina"
-                            Value: =OtpremniceLines.Selected.Quantity
+                            Value: =Otpremnice_ResEntryGallery.Selected.Quantity
                             Width: =150
                             X: =40
                             Y: =40
@@ -1534,7 +1534,7 @@
                                 }
                             );
                             
-                            Set(isModalOpen, false);
+                            UpdateContext({isModalOpen: true})
                         Text: ="Spasi"
                         Width: =96
                         X: =0
