--- a/BSiNS/Src/scr_XMLOtpremnice.fx.yaml
+++ b/BSiNS/Src/scr_XMLOtpremnice.fx.yaml
@@ -1058,7 +1058,7 @@
                                 Placeholder: ="Izaberite datum..."
                                 SelectedDate: =ThisItem.Exp_Date
                                 StartOfWeek: ="Monday"
-                                Visible: =false
+                                Visible: =true
                                 Width: =158
                                 X: =148
                                 Y: =92
